--- a/main/templates/post_list.html
+++ b/main/templates/post_list.html
@@ -21,7 +21,7 @@
     <hr>
     {% endfor %}
 
-    <a href="/" class="button">Добавить пост</a>
+    <a href="/post" class="button">Добавить пост</a>
 
 </main>
 </body>
